# medizen-clinic-ai-workspace

./: .gitignore
claude-workspace/: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  .template-version  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MAINTAINER.md  PROJECT.md  README.md  package-lock.json  package.json  pyproject.toml
claude-workspace/.claude/: SETTINGS_README.md  settings.json  settings.local.json.example
claude-workspace/.claude/agents/: README.md  code-implementation.md  code-review.md  documentation.md  manager.md  test.md
claude-workspace/.claude/hooks/: cleanup-hook.js  context-hook.js  hooks.json  save-hook.js  smart-install.js  summary-hook.js
claude-workspace/.github/workflows/: ci.yml
claude-workspace/deployment/: MIGRATION-CHECKLIST.md  PREREQUISITES.md  QUICK-START.md  README.md  SECURITY.md  TROUBLESHOOTING.md
claude-workspace/docker/: docker-compose.yml  postgres-init.sql
claude-workspace/docs/: README.md
claude-workspace/scripts/: check-be-process.ps1  check-docker-state.ps1  check-ngrok.ps1  check-track-status.js  check-uvicorn.ps1  docker-restart-attempt2.ps1  e2e_final.py  e2e_final_v2.py  e2e_full_test.py  e2e_operational_test.py  e2e_verify.py  export-pdf.js  function_list_data.py  generate_function_list_xlsx.py  gp_final_v2.py  gp_test.py  gp_test_final.py  launch-parallel-devs.ps1  migrate-tasks-to-multifile.js  project-build.sh  restart-docker.ps1  send-release-notification.js  setup-memory.js  wait-docker-ready.ps1  worker-service.js
claude-workspace/tests/: conftest.py
(+1057 files in other folders)
